website/src/css/customTheme.css
:root {
  --ifm-color-primary-lightest: rgb(228, 222, 222);
  --ifm-color-primary-lighter: #d0312d;
  --ifm-color-primary-light: #f8f8fa;
  --ifm-color-primary: #e8433e;
  --ifm-color-dark: #000000;
  --ifm-color-primary-dark: #a5a0a0;
  --ifm-color-primary-darker: #9a2521;
  --ifm-color-shadow--lw: #7f1e1b;

  --color-primary: #e8433e;
  --color-secondary: #4b5563;
  --color-secondary-bg: #f3f4f6;
}

body {
  font-family: "Inter", sans-serif;
}

div.inner {
  color: var(--ifm-color-primary);
}
.image {
  padding: 75px 10px 75px 75px;
  height: 200;
  width: 200;
}
.more-users {
  padding-top: 75px;
}
.product-showcase-section {
  color: var(--ifm-color-primary);
}

.post-header {
  padding-top: 50px;
}
.header {
  padding-top: 50px;
}

header h2 {
  color: var(--color-primary);
}

/* navbar */
.navbar .react-toggle {
  display: none;
}
.navbar__link:hover,
.navbar__link--active {
  color: var(--color-primary);
}

/* home splash */
.home-splash {
  margin-top: 8px;
}

.home-splash .title {
  font-size: 2.4rem;
  color: black;
  opacity: 0.92;
}

.home-splash .title.brand {
  font-size: 2.9rem;
  color: #df2d2d;
}

.home-splash .title.slogan .feature-word {
  background: var(--color-secondary-bg);
  border-radius: 8px;
  padding: 2px 10px;
  overflow: hidden;
}

.home-splash .title.slogan .feature-word span {
  display: inline-block;
}

.home-splash .subtitle {
  color: #000000;
  opacity: 0.58;
  font-size: 1.2rem;
}

.home-splash .button-wrapper {
  margin-top: 28px;
}

/* showcase */
.product-showcase-section {
  color: var(--color-primary);
}
.showcase {
  padding-bottom: 8rem;
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
}
.showcase .container {
  padding-left: 0;
  padding-right: 0;
  margin-left: 0;
  margin-right: 0;
  max-width: unset;
}

.showcase .user-logos {
  margin-top: 48px;
}

.showcase .user-logos:hover span {
  animation-play-state: paused !important;
}

.showcase .logo-row {
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  height: 5rem;
  overflow: hidden;
  position: relative;
  width: 100%;
}

.showcase .user-logos-container {
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  position: absolute;
}

.showcase .user-logos-container section {
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logos-container section span {
  animation: 36s linear 0s infinite reverse none running logo-animation;
  white-space: nowrap;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.showcase .user-logo {
  max-width: 128px;
  max-height: 50px;
  margin: 0 16px;
}

@keyframes logo-animation {
  from {
    transform: translateX(-100%);
  }

  to {
    transform: translateX(0%);
  }
}

/* learn how */
.learn-how {
  background: var(--ifm-color-primary-light);
  width: 100%;
  border-radius: 16px;
  background: var(--color-secondary-bg);
}
.learn-how .container {
  margin-top: 36px;
}
.learn-how .hero__title {
  font-weight: 700;
  color: black;
  opacity: 0.84;
  font-size: 2.2rem;
  margin-bottom: 10px;
}

/* button */
.button {
  margin: 0 10px;
  padding: 8px 18px;
  font-size: 18px;
  font-weight: 600;
  border-radius: 10px;
  border: none;
  background: #fee2e2;
  color: #ef4444;
  transition: all 0.3s;
}
.button:hover {
  background: #fecaca;
  color: #ef4444;
}
.button.github {
  background: #111827;
  color: white;
  display: inline-flex;
  align-items: center;
}
.button.github .github-logo {
  height: 24px;
  margin: 0 8px 1px 0px;
}
.button.github:hover {
  background: #000;
}
.button-wrapper {
  margin: 0 -10px;
}
.button.secondary {
  background: #f3f4f6;
  color: var(--color-secondary);
  border: 1px solid #d1d5db;
  box-sizing: border-box;
}
.button.secondary:hover {
  background: #e5e7eb;
}
a {
  color: inherit;
  cursor: pointer;
}
a:hover {
  color: var(--color-primary);
}

/* footer */
.footer__links .footer__title {
  font-weight: 700;
  font-size: 1.1rem;
}
.footer__links .footer__item a {
  opacity: 0.94;
}
.footer__links a:hover {
  opacity: 1;
  text-decoration: none;
}

.footer__bottom {
  margin-top: 36px;
}
.footer__bottom a[href^="https://www.apache.org/"]
{
  opacity: 1;
}
.footer__bottom a[href^="https://www.apache.org/"]:hover
{
  transform: scale(0.5);
}
.footer__bottom a[href^="https://www.apache.org/"] img
{
  margin-top: 0;
  background: white;
  padding: 8px 20px 6px 19px;
  border-radius: 24px;
}
.footer__copyright {
  font-size: 12px;
  max-width: 680px;
  margin: 0 auto;
  opacity: 0.88;
}

/* 
  Animations
*/

/* feature-word-text */
.feature-word-text-enter,
.feature-word-text-appear {
  opacity: 0;
  transform: translateX(-24px);
}

.feature-word-text-enter-active,
.feature-word-text-appear-active {
  opacity: 1;
  transform: translateX(0);
  transition: all 300ms;
}

.feature-word-text-enter-done {
  opacity: 1;
}

.feature-word-text-exit {
  transform: translateX(24px);
  opacity: 1;
}

.feature-word-text-exit-active {
  opacity: 0;
  transition: opacity 300ms;
}

.feature-word-text-exit-done {
  opacity: 0;
}

/* help page */
.help-page h1 {
  font-size: 3rem;
}
.help-page .cards {
  margin-top: 38px;
  margin-bottom: 72px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 36px;
}
.help-page .card {
  padding: 24px 28px 18px 28px;
  box-shadow: unset;
  background: var(--color-secondary-bg);
}

.help-page .card .header {
  padding: 0;
}

.help-page .card h2 {
  display: flex;
  align-items: center;
}

.help-page .card h2 img {
  padding-bottom: 2px;
  height: 28px;
  margin-right: 14px;
}

.help-page #documents-icon {
  margin-right: 10px;
  margin-left: -6px;
}

.help-page .card p {
  color: #6b7280;
}

.help-page .card .buttons {
  margin-top: 18px;
}

.help-page .card .buttons a {
  font-size: 18px;
  font-weight: 600;
  transition: all 0.3s;
  margin-right: 32px;
}

.help-page .card .buttons a:hover {
  text-decoration: none;
}

.help-page .card .buttons a:hover svg {
  transform: translateX(4px);
}

.help-page .card .buttons svg {
  height: 12px;
  margin-left: 4px;
  transition: transform 0.3s;
}

.help-page .card .buttons {
  display: flex;
}

